--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stackoverflown.MainWindow">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #FFFFFF;"
+            xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="stackoverflown.MainWindow">
     <children>
-        <TextField fx:id="userInput" layoutY="558.0" onAction="#handleUserInput" prefHeight="41.0" prefWidth="324.0" promptText="Type your command here..." AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="76.0" />
-        <Button fx:id="sendButton" layoutX="324.0" layoutY="558.0" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="41.0" prefWidth="76.0" text="Send" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="0.0" />
-        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="557.0" prefWidth="400.0" vvalue="1.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ScrollPane fx:id="scrollPane" fitToWidth="true" hbarPolicy="NEVER" prefHeight="540.0" prefWidth="400.0"
+                    style="-fx-background: #FFFFFF; -fx-background-color: #FFFFFF;" vbarPolicy="AS_NEEDED"
+                    AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                    AnchorPane.topAnchor="0.0">
             <content>
-                <VBox fx:id="dialogContainer" prefWidth="388.0" spacing="5.0" />
+                <VBox fx:id="dialogContainer" prefWidth="388.0" spacing="6.0" style="-fx-background-color: #FFFFFF;">
+                    <padding>
+                        <Insets bottom="10.0" left="4.0" right="4.0" top="10.0" />
+                    </padding>
+                </VBox>
             </content>
         </ScrollPane>
+        <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="400.0" spacing="8.0"
+              style="-fx-background-color: #F8F9FA; -fx-border-color: #E8EAED; -fx-border-width: 1 0 0 0;"
+              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <children>
+                <TextField fx:id="userInput" onAction="#handleUserInput" prefHeight="40.0"
+                           promptText="Type your message..."
+                           style="-fx-background-color: #FFFFFF; -fx-border-color: #DADCE0; -fx-border-radius: 20px; -fx-background-radius: 20px; -fx-padding: 12px; -fx-font-size: 14px; -fx-font-family: 'Segoe UI', Arial, sans-serif;"
+                           HBox.hgrow="ALWAYS" />
+                <Button fx:id="sendButton" mnemonicParsing="false" onAction="#handleUserInput" prefHeight="40.0"
+                        prefWidth="50.0" style="-fx-background-color: #0084FF; -fx-text-fill: white; -fx-background-radius: 20px; -fx-font-size: 16px; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text=">" />
+            </children>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+        </HBox>
     </children>
 </AnchorPane>
